# mimic_geek_time_rust

./: README.md
_04_httpie/: Cargo.toml
_04_httpie/src/: main.rs
_05_thumbor/: Cargo.toml  abi.proto  build.rs
_05_thumbor/src/: channel.rs  engine.rs  main.rs  pb.rs
_05_thumbor/src/engine/: photon.rs
_05_thumbor/src/pb/: abi.rs
