[package]
name = "httpie"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version ="3.2.25",features = ["derive"] }
colored = "3.0.0"
jsonxf = "1.1.1"
mime = "0.3.17"
reqwest = { version = "0.12.22", features = ["json"] }
tokio = {version = "1.46.1",features = ["full"]}
syntect = "5.2.0"